# NaiveRenderer

./: CMakeLists.txt  README.md
0/: CMakeLists.txt  README.md  main.cpp
1/: CMakeLists.txt  README.md  main.cpp
